--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>NC-News</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div className="bg-slate-300" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
